--- a/js/file/file.css
+++ b/js/file/file.css
@@ -6,6 +6,7 @@
 .file-div > .append-btn {
   padding: 0.5rem;
   border: 0;
+  cursor: pointer;
 }
 
 .file-div > .append-btn::after {
@@ -45,4 +46,5 @@
   outline: 0;
   border: 0;
   max-width: 20rem;
+  cursor: pointer;
 }
